[package]
name = "mula"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo@noronha.eti.br>"]
edition = "2018"

description = "Share expensive computation with various requesters"
repository = "https://github.com/kov/mula.git"

license = "MIT"
readme = "README.md"

keywords = ["job", "sharing", "task"]
categories = ["concurrency"]


[dependencies]
parking_lot = "0.11.0"
spmc = "0.3.0"
once_cell = "*"
mula_proc_macro = { path = "mula_proc_macro"}

[dev-dependencies]
rand = "0.7.3"
lazy_static = "*"

[workspace]
members = ["mula_proc_macro"]